# Chloe-Vibes

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: android-debug-apk.yml  ci.yml
android/: build.gradle.kts  local.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/ashairfoil/chloevibes/: MainActivity.kt
android/app/src/main/kotlin/com/ashairfoil/chloevibes/audio/: AudioCaptureManager.kt  BeatDetector.kt  ClimaxEngine.kt  EnvelopeProcessor.kt  Gate.kt  Presets.kt  SpectralAnalyzer.kt
android/app/src/main/kotlin/com/ashairfoil/chloevibes/device/: BleDeviceManager.kt  LovenseProtocol.kt
android/app/src/main/kotlin/com/ashairfoil/chloevibes/ui/: MainScreen.kt  Theme.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/kotlin/com/ashairfoil/chloevibes/audio/: ParityTest.kt
docs/: AUTO_LOCK_DESIGN.md  TECHNICAL_REFERENCE.md  TEMPORAL_ARCHITECTURE.md
src/: audio.rs  auto_lock.rs  gui.rs  lib.rs  main.rs  presets.rs  settings.rs  util.rs
tests/: parity.rs  parity_golden.csv
